# rawg

./: Cargo.toml  scratch.rs
src/: api.rs  auth.rs  client.rs  error.rs  lib.rs  list.rs  models.rs
src/api/: creators.rs  developers.rs  games.rs  genres.rs  platforms.rs  publishers.rs  stores.rs  tags.rs
src/models/: creators.rs  developers.rs  games.rs  genres.rs  platforms.rs  publishers.rs  stores.rs  tags.rs
